--- a/less/faq.less
+++ b/less/faq.less
@@ -1,6 +1,1 @@
-.desc b, .card {
-	color: var( --pri-text );
-}
-.expand.icon {
-	top: 1em;
-}
+@import (reference) 'library.less';
