--- a/less/header.less
+++ b/less/header.less
@@ -1,14 +1,3 @@
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	transition: all 0.25s ease-in-out;
-}
-a {
-	text-decoration: none;
-}
 @import (reference) 'library.less';
 .row {
 	display: flex;
