--- a/less/todo_doc.less
+++ b/less/todo_doc.less
@@ -2,27 +2,30 @@
 section {
 	.row {
 		pointer-events: none;
-		input {
-			pointer-events: all;
-		}
-		.number {
-			.fw7();
-			.btn-padding();
-			.circle-radius();
-			background: @iste-blue;
-			color: var(--card-bg);
-			transition: none;
+		.title {
+			* {
+				display: inline-block;
+			}
+			.number{
+				.fw7();
+				.btn-padding();
+				.circle-radius();
+				margin-right: 0.5em;
+				background: @iste-blue;
+				color: var(--card-bg);
+				transition: none;
+			}
 		}
 	}
 	.card.completed {
-		.number {
-			background: @cool-green;
-			color: grey;
-		}
-		.title {
+		.title .text{
+			.sec-text();
 			text-decoration: line-through;
 			font-style: italic;
-			color: grey;
+		}
+		.title .number {
+			background: @cool-green;
+			text-decoration: none;
 		}
 	}
 }
